[project]
name = "vert"
version = "0.1.1"
description = "Sane way to extract/view archived contents."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
vert = "vert.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vert"]
